--- a/404.md
+++ b/404.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: 404 - Page not found
+title: Данной страницы не существует
 permalink: /404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+Данной страницы не существует. Если вы считаете что это ошибка, свяжитесь со мной или перейдите [обратно на главную страницу]({{ site.baseurl }}/).
 
 [<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
